--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
     <p>Sexo: Hembra</p>
     
     <img src="img/kira.jpg" alt="perro">
+    <img src="img/sally.jpg" alt="perro2">
 </body>
 </html>
